# libsysml

./: .gitmodules  CONTRIBUTING.md  README.md
cpp/: .clang-format  CMakeLists.txt
cpp/include/sysml/: assert.hpp  code_generator.hpp  intcmp.hpp  math.hpp  measure.hpp  memory.hpp  miltuple.hpp  ndarray.hpp  ndloop.hpp  numeric.hpp  numerical_error.hpp  osforest.hpp  predef.hpp  random.hpp  smallvec.hpp  type_traits.hpp  utility.hpp  vek.hpp
cpp/include/sysml/bits/: aligned_alloc.hpp  aligned_allocator.hpp  arithmetic.hpp  observed_ptr.hpp  vek_helpers.hpp
cpp/include/sysml/bits/ndarray/: algorithm.hpp  base.hpp  fwd.hpp  ndarray_view.hpp  old_base.hpp  proxy.hpp  ref.hpp  types.hpp  utility.hpp  view.hpp
cpp/include/sysml/bits/numeric/: fp16.hpp  fp32.hpp  fp64.hpp  ivec.hpp
cpp/include/sysml/bits/numeric/bits/fp16/: detect.hpp  half.hpp
cpp/include/sysml/bits/vek/: .#vek_struct.hpp  is_vek.hpp  std_inject.hpp  to_vek.hpp  vek_binary_operators.hpp  vek_cast.hpp  vek_comparisons.hpp  vek_math.hpp  vek_ostream.hpp  vek_struct.hpp  vek_unary_operators.hpp
cpp/include/sysml/code_generator/: #meta_mnemonics.hpp#  .#meta_mnemonics.hpp  code_generated_fn.hpp  code_generator.hpp  memory_resource.hpp  meta_mnemonics.hpp  predef.hpp  protect.hpp  xbyak.hpp
cpp/include/sysml/code_generator/detail/: apple.hpp
cpp/include/sysml/code_generator/meta_mnemonics/arm/: large_imm.hpp  m1_accelerate.hpp  stack.hpp  vreg_transpose.hpp  vreg_view.hpp
cpp/include/sysml/code_generator/x86/: codegen_perf.hpp
cpp/include/sysml/measure/: measure.hpp
cpp/include/sysml/ndarray/: algorithm.hpp  base.hpp  descriptor.hpp  ndarray.hpp  ndarray_view.hpp  proxy.hpp  ref.hpp  types.hpp  utility.hpp  view.hpp
cpp/include/sysml/numeric/: fp16.hpp  fp32.hpp  integer.hpp  ivec.hpp
cpp/include/sysml/osforest/: osforest.hpp
cpp/include/sysml/osforest/detail/: navigator.hpp  node.hpp  node_base.hpp
cpp/include/sysml/thread/: barrier.hpp  core.hpp  cpu_pool.hpp  operating_cpu_set.hpp
cpp/include/sysml/vek/: is_vek.hpp  std_inject.hpp  to_vek.hpp  vek_binary_operators.hpp  vek_cast.hpp  vek_common_types.hpp  vek_comparisons.hpp  vek_math.hpp  vek_ostream.hpp  vek_unary_operators.hpp
cpp/include/sysml/workaround/: .#cpp20.hpp
cpp/src/: sysml.cpp
cpp/tests/: CMakeLists.txt  meta_mnemonics.cpp  ndarray.cpp  numeric.cpp  observed_ptr.cpp  osforest.cpp  smallvec.cpp  vek.cpp
cpp/tests/arm/meta_mnemonics/: large_imm.cpp  m1_accelerate.cpp  stack.cpp  vreg_transpose.cpp
cpp/tests/utilities/: random_vector.hpp
sysmlcpp/: CMakeLists.txt
sysmlcpp/include/sysml/: aligned_alloc.hpp  aligned_allocator.hpp  assert.hpp  math.hpp  measure.hpp  sysml.hpp  type_traits.hpp
sysmlcpp/include/sysml/bits/: aligned_allocator.hpp
sysmlcpp/include/sysml/measure/: measure.hpp
sysmlcpp/include/sysml/numeric/: fp64.hpp
sysmlcpp/include/sysml/thread/: cpu_set.hpp  operating_cpu_set.hpp  parallel_for.hpp
sysmlcpp/include/sysml/workaround/: cpp20.hpp
